# ShikimoriExtendedAPI

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: .env_example  1_urls.py  2_basic_usage.py  2_some_more_examples.py  example.py
shikimoriextendedapi/: __init__.py  client.py  endpoints.py
shikimoriextendedapi/utils/: __init__.py  limiter.py  url_builder.py
src/shikimori_extended_api/: __init__.py  client.py  datatypes.py  endpoints.py  enums.py
src/shikimori_extended_api/utils/: __init__.py  url_builder.py
tests/: common.py  conftest.py
tests/fixtures/: fixture_client.py  fixture_vcr.py
tests/test_functions/: test_client.py  test_url_builder.py
tests/utils/: __init__.py  catchtime.py  results.py
tests/vcr_cassettes/test_client/: animes.yaml  users.yaml  whoami.yaml
