[tool.poetry]
name = "shikimoriextendedapi"
version = "0.2.1"
authors = [
  "Dmitry Patrushev <impda@mail.ru>"
]
maintainers = [
  "Dmitry Patrushev <impda@mail.ru>"
]
description = "API for https://shkimori.one"
readme = "README.md"
license = "MIT"
keywords = ["shikimori", "api"]
homepage = "https://github.com/imPDA/ShikimoriExtendedAPI"
exclude = [
  "examples",
  "tests"
]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
pydantic = "^2.6.3"

[tool.poetry.group.dev]
#

[tool.poetry.group.dev.dependencies]
django-environ = "^0.11.2"

[tool.poetry.group.test]
#

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
vcrpy = "^6.0.1"
django-environ = "^0.11.2"
pytest-asyncio = "^0.23.6"
pytest-recording = "^0.13.1"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
